// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it matches snapshot 1 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  hi Jack 
  save
</div>
`;

exports[`it matches snapshot 2 1`] = `
<div
  className="button-style"
  data-testid="button"
>
  hi Jack 
  click me
</div>
`;
